--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <header class="pb-3 mb-4 position-relative">
     <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-      <img src="assets/images/carrot.png" alt="Logo" width="230" height="200" class="me-2" viewBox="0 0 118 94">
+      <img src="Assets/images/carrot.png" alt="Logo" width="230" height="200" class="me-2" viewBox="0 0 118 94">
       <h1 class="display-3 mt-5">Carrot</h1>
     </a>
 
