--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
           <img id="weather-icon" src="https://openweathermap.org/img/wn/04d.png" />
         </div>
         <p class="pt-1 pl-2">Temperature: <span id="temperature"></span> &deg;</p>
+        <p class="pl-2">Humidity: <span id="humidity"></span>%</p>
+        <p class="pl-2">Wind Speed: <span id="wind"></span> MPH</p>
       </div>
       <p class="fs-5">Today's Events</p>
 
@@ -144,11 +146,12 @@
           <label for="username">Username</label>
         </div>
         <div class="form-floating">
-          <input type="city" class="form-control" id="city">
+          <input type="text" class="form-control" id="scity" value="Atlanta">
           <label for="city">City</label>
         </div>
         <div class="input-group-append">
-          <button id="submit" class="btn btn-outline-secondary" type="button" onclick="storeUserInfo()">Submit
+          <button id="submit" class="btn btn-outline-secondary" type="button"
+            onclick="weatherData();storeUserInfo();">Submit
             &#129365</button>
           <button id="back" class="btn btn-outline-secondary" type="button" onclick="window.location.reload()">Back
             &#128007</button>
@@ -182,6 +185,7 @@
   <!-- Our JavaScript file -->
   <script src="./Assets/js/script.js"></script>
   <script src="./Assets/js/timezone.js"></script>
+  <script src="./Assets/js/weather.js"></script>
 </body>
 
 </html>
