fixed weather with anastasia

--- a/index.html
+++ b/index.html
@@ -79,18 +79,6 @@
       <hr>
       <!-- Current Weather Forecast -->
       <div class="currentWeather">
-        <div class="weatherbox">
-          <!-- <h2 id="city">New York</h2> -->
-          <img id="weather-icon" src="https://openweathermap.org/img/wn/04d.png" />
-        </div>
-        <p class="pt-1 pl-2">Local Temperature: <span id="temperature"></span> &deg;</p>
-      </div>
-      <div id="todays-events">
-        <p class="fs-5 p-events">Today's Events</p>
-      </div>
-
-      <!-- Current Weather Forecast -->
-      <div class="currentWeather">
         <div>
           <!-- <h2 id="city">New York</h2> -->
           <img id="weather-icon" src="https://openweathermap.org/img/wn/04d.png" />
@@ -98,6 +86,15 @@
         <p class="pt-1 pl-2">Temperature: <span id="temperature"></span> &deg;</p>
         <p class="pl-2">Humidity: <span id="humidity"></span>%</p>
         <p class="pl-2">Wind Speed: <span id="wind"></span> MPH</p>
+      </div>
+
+      <div id="todays-events">
+        <p class="fs-5 p-events">Today's Events</p>
+      </div>
+
+      <!-- Current Weather Forecast -->
+      <!-- <div class="currentWeather"> -->
+
 
         <div>
           <p class="fs-5 p-events">What did the rabbit give his girlfriend?</p>
@@ -160,7 +157,7 @@
         </div>
         <div class="form-floating">
           <input type="text" class="form-control" id="scity" value="Atlanta">
-          <label for="city">City</label>
+          <label for="scity">City</label>
         </div>
         <div class="input-group-append">
           <button id="submit" class="btn btn-outline-secondary" type="button"
