fixed city tag on welcome

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
         <div class="form-floating">
           <input type="text" class="form-control" id="scity" value="Atlanta">
-          <label for="scity">City</label>
+          <label for="city">City</label>
         </div>
         <div class="input-group-append">
           <button id="submit" class="btn btn-outline-secondary" type="button"
